force-app/main/default/objects/Product_Code__c/Product_Code__c.object-meta.xml
<CustomObject>
    <description>For Inward Declaration</description>
    <label>Product Code</label>
    <nameField>
        <label>Product Code Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>