force-app/main/default/objects/Product_Code__c/fields/HS_Code_COR__c.field-meta.xml
<CustomField>
    <fullName>HS_Code_COR__c</fullName>
    <label>HS Code/COR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>