force-app/main/default/objects/Product_Code__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <length>20</length>
    <type>Text</type>
</CustomField>