force-app/main/default/objects/Product_Code__c/fields/PC_C_F__c.field-meta.xml
<CustomField>
    <fullName>PC_C_F__c</fullName>
    <inlineHelpText>Product Code C&amp;F</inlineHelpText>
    <label>PC_C&amp;F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>