force-app/main/default/objects/Product_Code__c/fields/PC_CIF__c.field-meta.xml
<CustomField>
    <fullName>PC_CIF__c</fullName>
    <inlineHelpText>Product Code CIF</inlineHelpText>
    <label>PC_CIF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>