force-app/main/default/objects/Product_Code__c/fields/PC_FOB__c.field-meta.xml
<CustomField>
    <fullName>PC_FOB__c</fullName>
    <inlineHelpText>Product Code FOB</inlineHelpText>
    <label>PC FOB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>