force-app/main/default/objects/Product_Code__c/fields/PC_Frieght__c.field-meta.xml
<CustomField>
    <fullName>PC_Frieght__c</fullName>
    <inlineHelpText>Product Code Freight</inlineHelpText>
    <label>PC Freight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>