force-app/main/default/objects/Product_Code__c/fields/PC_Insurance__c.field-meta.xml
<CustomField>
    <fullName>PC_Insurance__c</fullName>
    <inlineHelpText>Product Code Insurance</inlineHelpText>
    <label>PC Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>