force-app/main/default/objects/Product_Code__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>17</length>
    <type>Text</type>
</CustomField>