force-app/main/default/objects/Product_Code__c/fields/VAC__c.field-meta.xml
<CustomField>
    <fullName>VAC__c</fullName>
    <label>VAC</label>
    <type>TextArea</type>
</CustomField>