force-app/main/default/objects/Product_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product_Code__c</columns>
    <columns>NAME</columns>
    <columns>PC_C_F__c</columns>
    <columns>HS_Code_COR__c</columns>
    <columns>Brand__c</columns>
    <columns>Date__c</columns>
    <columns>Option__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>